--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
