--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-config": "^1.5.2",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
