--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-native": "0.74.2",
     "react-native-config": "^1.5.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-reanimated": "^3.12.1",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0"
   },
