--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-config": "^1.5.2",
