--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.1.0",
     "react-navigation": "^5.0.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
